<resources>
    <string name="app_name">HolaMundo</string>
    <string name="solve">Calcular</string>
    <string name="send">Enviar</string>
    <string name="save">Guardar</string>
    <string name="update">Actualizar</string>
    <string name="get">Obtener</string>
    <string name="delete">Borrar</string>
    <string name="claveValor">Clave Valor</string>
    <string name="archivos">Archivos</string>
    <string name="more">Más</string>
    <string name="db">DB</string>
    <string name="password">Contraseña:</string>
    <string name="mail">Mail:</string>
    <string name="login">Entrar</string>
    <string name="request">Request</string>

    <string name="take">Capturar</string>

    <string name="notificacion">Notificacion</string>
    <string name="servicio">Servicio</string>


    <string name="value">Escribe un numero</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>
