<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:id="@+id/abbtnHome"
          android:title="@string/app_name"
          app:showAsAction="ifRoom"
          android:icon="@drawable/ic_search_black_24dp"/>

    <item android:id="@+id/abbtnClaveValor"
          android:title="@string/claveValor"
          app:showAsAction="never"/>
    <item android:id="@+id/abbtnDB"
        android:title="@string/db"
        app:showAsAction="never"/>
    <item android:id="@+id/abbtnArchivos"
        android:title="@string/archivos"
        app:showAsAction="never"/>
    <item android:id="@+id/abbtnRegistro"
        android:title="@string/login"
        app:showAsAction="never"/>
    <item android:id="@+id/abbtnRequest"
        android:title="@string/request"
        app:showAsAction="never"/>

</menu>