<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".camara">

    <ImageView
        android:id="@+id/imgSelfie"
        android:layout_width="230dp"
        android:layout_height="224dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnTakeSelfie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:onClick="letMeTakeASelfie"
        android:text="@string/take"
        app:layout_constraintStart_toStartOf="@+id/imgSelfie"
        app:layout_constraintTop_toBottomOf="@+id/imgSelfie" />

    <Button
        android:id="@+id/btnSaveSelfie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveSalfie"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/imgSelfie"
        app:layout_constraintTop_toTopOf="@+id/btnTakeSelfie" />

    <Button
        android:id="@+id/btnSearchSelfie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:onClick="searchSelfie"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="@+id/imgSelfie"
        app:layout_constraintStart_toStartOf="@+id/imgSelfie"
        app:layout_constraintTop_toBottomOf="@+id/btnSaveSelfie" />
</androidx.constraintlayout.widget.ConstraintLayout>