<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/abMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="?attr/actionBarTheme"
        app:menu="@menu/action_bar_menu"/>


    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Hello World!"
        app:layout_constraintEnd_toEndOf="@+id/btnSolve"
        app:layout_constraintStart_toStartOf="@+id/btnSolve"
        app:layout_constraintTop_toBottomOf="@+id/btnSolve" />

    <EditText
        android:id="@+id/etArg1"
        android:layout_width="161dp"
        android:layout_height="46dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/value"
        android:inputType="textPersonName"
        android:onClick="calculateSum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/abMain" />

    <EditText
        android:id="@+id/etArg2"
        android:layout_width="164dp"
        android:layout_height="46dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/value"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etArg1" />

    <Button
        android:id="@+id/btnSolve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/solve"
        android:textColor="@color/main"
        app:layout_constraintEnd_toEndOf="@+id/etArg2"
        app:layout_constraintStart_toStartOf="@+id/etArg1"
        app:layout_constraintTop_toBottomOf="@+id/etArg1" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/colorAccent"
        android:onClick="enviarData"
        android:text="@string/send"
        android:textColor="@color/main"
        app:layout_constraintEnd_toEndOf="@+id/tvResult"
        app:layout_constraintStart_toStartOf="@+id/tvResult"
        app:layout_constraintTop_toBottomOf="@+id/tvResult" />

    <!--<Button
        android:id="@+id/btnClaveValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="50dp"
        android:onClick="goToClaveValor"
        android:text="@string/claveValor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnArchivos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:onClick="goToCrearArchivo"
        android:text="@string/archivos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:onClick="goToDB"
        android:text="@string/db"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnArchivos"
        app:layout_constraintStart_toEndOf="@+id/btnClaveValor" />-->

</androidx.constraintlayout.widget.ConstraintLayout>